Add title to index page.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-
+		<title>SilverStripe API and Developer Guides</title>
+		
 		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
