Fix error linking to directory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>SilverStripe API and Developer Guides</title>
-		
+
 		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
@@ -18,7 +18,7 @@
 		docs.silverstripe.org</a> website. These pages are listed as Guides in Dash on the left hand side.</p>
 
 		<div class="view_link">
-			<p><a href="doc/">Click to view the tutorial documentation</a></p>
+			<p><a href="doc/index/index.html">Click to view the tutorial documentation</a></p>
 		</div>
 
 		<p>The second part of the Dash documentation is the <abbr title="application programming interface">API</abbr>
